--- a/.gitignore
+++ b/.gitignore
@@ -69,7 +69,7 @@ buildNumber.properties
 
 
 ### Java ###
-*.class
+#*.class
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
@@ -82,3 +82,4 @@ buildNumber.properties
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+/liftsim.iml
