--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,14 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+		<plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>1.6.0</version>
+            <configuration>
+                <mainClass>com.robbiedaves.samples.liftsim.LiftSimApp</mainClass>
+            </configuration>
+        </plugin>
         </plugins>
     </build>
 
